--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   get_storage: ^2.1.1
   logger: ^2.4.0
   iconsax: ^0.0.8
+  image_picker: ^1.1.2
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
