--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   logger: ^2.4.0
   iconsax: ^0.0.8
   image_picker: ^1.1.2
+  lottie: ^3.1.2
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
@@ -29,4 +30,5 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+    - assets/animation/
 
